--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,6 @@
 
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating) {
 	color: grey;
-	margin-right: 0px;
 }
 
 #portfolio {
@@ -27,3 +26,6 @@ img:hover {
 	-webkit-filter: brightness(110%);
 }
 
+#links {
+	margin-left: 10px;
+}
